// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for input backup phrase 1`] = `
<View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 2,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Hind-SemiBold",
          "fontSize": 16,
          "lineHeight": 24,
        }
      }
    >
      backupKey
    </Text>
  </View>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      enablesReturnKeyAutomatically={true}
      multiline={true}
      onChangeText={[Function]}
      placeholder="backupPhrasePlaceholder"
      placeholderTextColor="#D1D5D8"
      rejectResponderTermination={true}
      shouldShowClipboard={[Function]}
      style={
        Array [
          Object {
            "borderColor": "#D1D5D8",
            "borderRadius": 4,
            "borderWidth": 1,
            "color": "#2E3338",
            "fontFamily": "Hind-Regular",
            "fontSize": 16,
            "lineHeight": 24,
            "minHeight": 125,
            "padding": 14,
            "paddingTop": 16,
            "textAlignVertical": "top",
          },
          false,
        ]
      }
      underlineColorAndroid="transparent"
      value="prosper winner find donate tape history measure umbrella agent patrol want rhythm old unable wash wrong need fluid hammer coach reveal plastic trust lake"
    />
  </View>
</View>
`;

exports[`renders correctly for input social backup phrase 1`] = `
<View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 2,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Hind-SemiBold",
          "fontSize": 16,
          "lineHeight": 24,
        }
      }
    >
      socialBackupPhraseHeader
    </Text>
  </View>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      enablesReturnKeyAutomatically={true}
      multiline={true}
      onChangeText={[Function]}
      placeholder="backupPhrasePlaceholder"
      placeholderTextColor="#D1D5D8"
      rejectResponderTermination={true}
      shouldShowClipboard={[Function]}
      style={
        Array [
          Object {
            "borderColor": "#D1D5D8",
            "borderRadius": 4,
            "borderWidth": 1,
            "color": "#2E3338",
            "fontFamily": "Hind-Regular",
            "fontSize": 16,
            "lineHeight": 24,
            "minHeight": 125,
            "padding": 14,
            "paddingTop": 16,
            "textAlignVertical": "top",
          },
          Object {
            "minHeight": 90,
          },
        ]
      }
      underlineColorAndroid="transparent"
      value="prosper winner find donate tape history measure umbrella agent patrol want rhythm celo"
    />
  </View>
</View>
`;

exports[`renders correctly for readonly backup phrase 1`] = `
<View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 2,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Hind-SemiBold",
          "fontSize": 16,
          "lineHeight": 24,
        }
      }
    >
      backupKey
    </Text>
  </View>
  <View
    style={
      Object {
        "alignContent": "center",
        "backgroundColor": "#EEEEEE",
        "borderRadius": 4,
        "justifyContent": "center",
        "marginTop": 10,
        "padding": 14,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#81868B",
          "fontFamily": "Hind-Regular",
          "fontSize": 16,
          "lineHeight": 27,
        }
      }
    >
      prosper winner find donate tape history measure umbrella agent patrol want rhythm old unable wash wrong need fluid hammer coach reveal plastic trust lake
    </Text>
  </View>
</View>
`;

exports[`renders correctly for readonly social backup phrase 1`] = `
<View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 2,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Hind-SemiBold",
          "fontSize": 16,
          "lineHeight": 24,
        }
      }
    >
      socialBackupPhraseHeader
    </Text>
  </View>
  <View
    style={
      Object {
        "alignContent": "center",
        "backgroundColor": "#EEEEEE",
        "borderRadius": 4,
        "justifyContent": "center",
        "marginTop": 10,
        "padding": 14,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#81868B",
          "fontFamily": "Hind-Regular",
          "fontSize": 16,
          "lineHeight": 27,
        }
      }
    >
      prosper winner find donate tape history measure umbrella agent patrol want rhythm celo
    </Text>
  </View>
</View>
`;
